src/test/ui/suggestions/use-type-argument-instead-of-assoc-type.stderr
error[E0107]: this trait takes 2 generic arguments but 4 generic arguments were supplied
  --> $DIR/use-type-argument-instead-of-assoc-type.rs:7:16
   |
LL |     i: Box<dyn T<usize, usize, usize, usize, B=usize>>,
   |                ^ expected 2 generic arguments
   |
note: trait defined here, with 2 generic parameters: `X`, `Y`
  --> $DIR/use-type-argument-instead-of-assoc-type.rs:1:11
   |
LL | pub trait T<X, Y> {
   |           ^ -  -
help: replace the generic bounds with the associated types
   |
LL |     i: Box<dyn T<usize, usize, A = usize, C = usize, B=usize>>,
   |                                +++        +++

error[E0191]: the value of the associated types `A` (from trait `T`), `C` (from trait `T`) must be specified
  --> $DIR/use-type-argument-instead-of-assoc-type.rs:7:16
   |
LL |     type A;
   |     ------ `A` defined here
LL |     type B;
LL |     type C;
   |     ------ `C` defined here
...
LL |     i: Box<dyn T<usize, usize, usize, usize, B=usize>>,
   |                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ associated types `A`, `C` must be specified

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0107, E0191.
For more information about an error, try `rustc --explain E0107`.
